# cp-cpp-template

./: .gitignore  CMakeLists.txt  debug.h  gxlib.h  macos_includes.h  template.cpp
