cmake_minimum_required(VERSION 3.22)
project(comp_cmake_template)
set(CMAKE_CXX_STANDARD 17)

add_executable(comp_cmake_template
#        A.cpp
#        B.cpp
#        C.cpp
#        D.cpp
#        E.cpp
#        F.cpp
#        G.cpp
#        H.cpp
#        J.cpp
#        I.cpp
#        K.cpp
)

add_definitions(-D NOT_LINUX=1)
add_definitions(-D LOCAL=1)
